--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.6.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.2",
+    "react-to-pdf": "^0.0.14",
     "react-toastify": "^9.0.8"
   },
   "devDependencies": {
