--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "daisyui": "^2.33.0",
     "firebase": "^9.12.1",
     "flat-color-icons": "^1.1.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.6.0",
