--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.12",
-    "@react-icons/all-files": "^4.1.0",
     "daisyui": "^2.33.0",
-    "firebase": "^9.12.1",
-    "flat-color-icons": "^1.1.0",
+    "firebase": "^9.15.0",
+    "html-react-parser": "^3.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
@@ -22,8 +20,8 @@
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.6.0",
     "react-loader-spinner": "^5.3.4",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.4.2",
-    "react-to-pdf": "^0.0.14",
     "react-toastify": "^9.0.8"
   },
   "devDependencies": {
@@ -33,6 +31,7 @@
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vite-plugin-chunk-split": "^0.4.7"
   }
 }
